--- a/app/src/main/res/layout/CapturePDF_fragment.xml
+++ b/app/src/main/res/layout/CapturePDF_fragment.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find Fragment"
+        android:text="Capture PDF Fragment"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:textSize="35sp" />
