Integrated filebrowser into app. Works well at the moment. Need to add a button for logging in and attempting to upload the chosen file to CI which can go to a Content Server defined within CI.

--- a/app/src/main/res/layout/fragment_fileexplorer.xml
+++ b/app/src/main/res/layout/fragment_fileexplorer.xml
@@ -34,8 +34,7 @@
 	         android:layout_marginTop="10dp" 
 	         android:layout_alignParentRight="true" 
 	         android:layout_height="wrap_content" 
-	         android:layout_width="wrap_content" 
-	         android:onClick="getfile" >
+	         android:layout_width="wrap_content">
          </Button>
     </RelativeLayout> 
 </LinearLayout>
