--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,10 +8,12 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/linearLayout"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="76dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,9 +30,11 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="65dp"
+        android:id="@+id/linearLayout2"
         android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout2">
+        android:layout_marginTop="94dp">
 
         <TextView
             android:layout_width="wrap_content"
