--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -19,10 +19,10 @@
                 android:title="@string/title_edittext_preference"
                 android:summary="@string/summary_edittext_preference"
                 android:dialogTitle="@string/dialog_title_edittext_preference" />
-                
+
         <ListPreference
                 android:key="list_preference"
-                android:title="@string/title_list_preference"
+                android:title="@string/title_list_cprofiles"
                 android:summary="@string/summary_list_preference"
                 android:entries="@array/entries_list_preference"
                 android:entryValues="@array/entryvalues_list_preference"
@@ -42,11 +42,28 @@
                 android:summary="@string/summary_screen_preference">
             
             <!-- You can place more preferences here that will be shown on the next screen. -->
-                     
+
+            <EditTextPreference
+                android:key="edittext_preference"
+                android:title="@string/title_edittext_preference"
+                android:summary="@string/summary_edittext_preference"
+                android:dialogTitle="@string/dialog_title_edittext_preference" />
+
+            <EditTextPreference
+                android:key="edittext_preference"
+                android:title="@string/title_edittext_preference"
+                android:summary="@string/summary_edittext_preference"
+                android:dialogTitle="@string/dialog_title_edittext_preference" />
+
             <CheckBoxPreference
                     android:key="next_screen_checkbox_preference"
                     android:title="@string/title_next_screen_toggle_preference"
                     android:summary="@string/summary_next_screen_toggle_preference" />
+
+            <Preference android:title="Acts like a button"
+                android:key="save"
+                android:summary="This will act like a button"/>
+
                 
         </PreferenceScreen>
 
