--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-        <string-array name="entries_list_preference">
+        <string-array name="ci_server_list_preference">
         <item>Alpha Option 01</item>
         <item>Beta Option 02</item>
         <item>Charlie Option 03</item>  
+    </string-array>
+
+    <string-array name="ci_servervalues_list_preference">
+        <item>Alpha</item>
+        <item>Beta</item>
+        <item>Charlie</item>
+    </string-array>
+
+    <string-array name="entries_list_preference">
+        <item>Alpha Option 01</item>
+        <item>Beta Option 02</item>
+        <item>Charlie Option 03</item>
     </string-array>
 
     <string-array name="entryvalues_list_preference">
