--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,82 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <PreferenceCategory
-            android:title="@string/inline_preferences">
-            
-        <CheckBoxPreference
-                android:key="checkbox_preference"
-                android:title="@string/title_checkbox_preference"
-                android:summary="@string/summary_checkbox_preference" />
 
-    </PreferenceCategory>
-                
     <PreferenceCategory
-            android:title="@string/dialog_based_preferences">
-
-        <EditTextPreference
-                android:key="edittext_preference"
-                android:title="@string/title_edittext_preference"
-                android:summary="@string/summary_edittext_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+            android:title="@string/CI_config_preferences">
 
         <ListPreference
-                android:key="list_preference"
-                android:title="@string/title_list_cprofiles"
-                android:summary="@string/summary_list_preference"
-                android:entries="@array/entries_list_preference"
-                android:entryValues="@array/entryvalues_list_preference"
-                android:dialogTitle="@string/dialog_title_list_preference" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-            android:title="@string/launch_preferences">
+            android:key="list_preference"
+            android:title="@string/title_list_cprofiles"
+            android:summary="@string/summary_list_preference"
+            android:entries="@array/entries_list_preference"
+            android:entryValues="@array/entryvalues_list_preference"
+            android:dialogTitle="@string/dialog_title_list_preference" />
 
         <!-- This PreferenceScreen tag serves as a screen break (similar to page break
              in word processing). Like for other preference types, we assign a key
              here so it is able to save and restore its instance state. -->
         <PreferenceScreen
-                android:key="screen_preference"
-                android:title="@string/title_screen_preference"
-                android:summary="@string/summary_screen_preference">
+                android:key="ci_server_preference"
+                android:title="@string/CI_config_screen_preference"
+                android:summary="@string/CI_config_summary_screen_preference">
             
             <!-- You can place more preferences here that will be shown on the next screen. -->
+            <EditTextPreference
+                android:key="profilename_preference"
+                android:title="@string/title_next_screen_ciprofile_preference"
+                android:summary="@string/summary_next_screen_ciprofile_preference"
+                android:dialogTitle="@string/dialog_title_ciprofile_preference" />
 
             <EditTextPreference
-                android:key="edittext_preference"
+                android:key="hostname_preference"
                 android:title="@string/title_next_screen_hostname_preference"
                 android:summary="@string/summary_next_screen_hostname_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+                android:dialogTitle="@string/dialog_title_hostname_preference" />
 
             <EditTextPreference
-                android:key="edittext_preference"
+                android:key="domain_preference"
                 android:title="@string/title_next_screen_domain_preference"
                 android:summary="@string/summary_next_screen_domain_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+                android:dialogTitle="@string/dialog_title_domain_preference" />
 
             <EditTextPreference
-                android:key="edittext_preference"
+                android:key="port_preference"
                 android:title="@string/title_next_screen_port_preference"
                 android:summary="@string/summary_next_screen_port_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+                android:dialogTitle="@string/dialog_title_port_preference" />
 
             <EditTextPreference
-                android:key="edittext_preference"
+                android:key="username_preference"
                 android:title="@string/title_next_screen_username_preference"
                 android:summary="@string/summary_next_screen_username_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
+                android:dialogTitle="@string/dialog_title_username_preference" />
 
             <EditTextPreference
-                android:key="edittext_preference"
+                android:key="password_preference"
                 android:title="@string/title_next_screen_password_preference"
                 android:summary="@string/summary_next_screen_password_preference"
-                android:dialogTitle="@string/dialog_title_edittext_preference" />
-
-            <CheckBoxPreference
-                    android:key="next_screen_checkbox_preference"
-                    android:title="@string/title_next_screen_toggle_preference"
-                    android:summary="@string/summary_next_screen_toggle_preference" />
+                android:dialogTitle="@string/dialog_title_password_preference" />
 
             <Preference android:title="@string/title_next_screen_button_preference"
                 android:key="save"
@@ -84,33 +63,19 @@
 
         </PreferenceScreen>
 
-        <PreferenceScreen
-                android:title="@string/title_intent_preference"
-                android:summary="@string/summary_intent_preference">
-
-            <intent android:action="android.intent.action.VIEW"
-                    android:data="http://developer.android.com/" />
-
-        </PreferenceScreen>
-
     </PreferenceCategory>
     
     <PreferenceCategory
-            android:title="@string/preference_attributes">
-    
-        <CheckBoxPreference
-                android:key="parent_checkbox_preference"
-                android:title="@string/title_parent_preference"
-                android:summary="@string/summary_parent_preference" />
+            android:title="@string/oresources_attributes">
 
-        <!-- The visual style of a child is defined by this styled theme attribute. -->
-        <CheckBoxPreference
-                android:key="child_checkbox_preference"
-                android:dependency="parent_checkbox_preference"
-                android:layout="?android:attr/preferenceLayoutChild"
-                android:title="@string/title_child_preference"
-                android:summary="@string/summary_child_preference" />
-            
+        <PreferenceScreen
+            android:title="@string/title_intent_preference"
+            android:summary="@string/summary_intent_preference">
+
+            <intent android:action="android.intent.action.VIEW"
+                android:data="http://systemware.com/" />
+
+        </PreferenceScreen>
     </PreferenceCategory>
     
 </PreferenceScreen>
