--- a/app/src/main/res/layout/capture_fragment.xml
+++ b/app/src/main/res/layout/capture_fragment.xml
@@ -5,21 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="9"
-        android:id="@+id/scrollView"
-        android:layout_gravity="center_horizontal" >
-
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
             android:id="@+id/imageView"
             android:contentDescription="image"
             android:layout_gravity="center"
             android:src="@drawable/sw_background"/>
-    </ScrollView>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1.5"
+    android:orientation="horizontal"
+    android:background="#ffffff">
+
+        <EditText
+            android:layout_margin="4dp"
+            android:inputType="textMultiLine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/description_text"
+            android:minLines="2"
+            android:maxLines="3"
+            android:scrollbars="horizontal"
+            android:hint="Description- limited to 80 characters"
+            android:layout_weight="5"
+            android:gravity="top"
+            android:maxLength="80"
+            android:layout_gravity="center"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/location"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_action_place"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
