--- a/app/src/main/res/layout/file_view.xml
+++ b/app/src/main/res/layout/file_view.xml
@@ -8,7 +8,7 @@
     android:layout_height="50dip" >
 </ImageView>
                 
-<TextView android:text="@+id/TextView01" 
+<TextView android:text="TextView01"
     android:id="@+id/TextView01" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
@@ -20,7 +20,7 @@
     
     
 </TextView>
-<TextView android:text="@+id/TextView02" 
+<TextView android:text="TextView02"
     android:id="@+id/TextView02" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
@@ -29,7 +29,7 @@
     android:layout_marginLeft="10dip">
     
 </TextView>
-<TextView android:text="@+id/TextViewDate" 
+<TextView android:text="TextViewDate"
     android:id="@+id/TextViewDate" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content" 
