--- a/app/src/main/res/layout/capture_fragment.xml
+++ b/app/src/main/res/layout/capture_fragment.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="8"
             android:id="@+id/imageView"
             android:contentDescription="image"
@@ -16,7 +16,7 @@
 
     <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="80dp"
     android:layout_weight="1.5"
     android:orientation="horizontal"
     android:background="#ffffff">
@@ -46,17 +46,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="40dp"
         android:orientation="horizontal"
-        android:background="#009dd9">
+        android:background="#32009dd9"
+        android:layout_gravity="bottom">
 
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/capture_new_pic"
-            android:background="#009dd9"
+            android:background="#32009dd9"
             android:src="@drawable/ic_action_camera"
             android:layout_gravity="center_vertical" />
 
@@ -64,36 +64,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/capture_gallery"
-            android:background="#009dd9"
-            android:src="@drawable/ic_action_new_picture"
-            android:layout_gravity="center_vertical"/>
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/capture_nav"
-            android:background="#009dd9"
-            android:src="@drawable/ic_action_collection"
-            android:layout_gravity="center_vertical" />
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/capture_save"
-            android:background="#009dd9"
-            android:src="@drawable/ic_action_save"
-            android:layout_gravity="center_vertical" />
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/capture_share"
-            android:background="#009dd9"
+            android:background="#32009dd9"
             android:src="@drawable/ic_action_share"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
