--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -5,8 +5,36 @@
 
     <TableLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="280dp"
         android:id="@+id/tableLayout">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Report Name"
+                android:id="@+id/textView5"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="50dp"
+                android:textSize="18sp"
+                android:textColor="#0078c9"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText"
+                android:layout_marginLeft="25dp"
+                android:hint="Fully Qualified Report Name" />
+        </TableRow>
 
         <TableRow
             android:layout_width="fill_parent"
@@ -45,6 +73,12 @@
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DSID Value"
+                android:id="@+id/textView6" />
         </TableRow>
 
         <TableRow
@@ -60,6 +94,13 @@
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Format Value"
+                android:id="@+id/textView7"
+                android:singleLine="false" />
         </TableRow>
 
         <TableRow
@@ -76,7 +117,21 @@
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Format Value"
+                android:id="@+id/textView8" />
         </TableRow>
+
     </TableLayout>
+
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageButton"
+        android:layout_below="@+id/tableLayout"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
