Added filepath, to provide path to the systemware folder(can add more later, user defined or whatnot)
Added InternalGalleryFragment and UploadFragment to upload from the gallery.

Added fragment to back stack so the back button will work.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -102,6 +102,18 @@
                     android:dialogTitle="@string/dialog_title_uploadtimeout_preference" />
 
             </PreferenceScreen>
+            <PreferenceScreen
+                android:key="gallery_preference"
+                android:title="Gallery Settings">
+
+                <EditTextPreference
+                    android:key="column_preference"
+                    android:title="Number of columns in the gallery"
+                    android:numeric="integer"
+                    android:dialogTitle="Number of columns"/>
+
+
+            </PreferenceScreen>
         </PreferenceCategory>
 
     
