--- a/app/src/main/res/layout/capture_fragment.xml
+++ b/app/src/main/res/layout/capture_fragment.xml
@@ -1,72 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/capture_background"
+        android:src="@drawable/clouds_parlx_bg1"/>
+
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
             android:id="@+id/imageView"
-            android:contentDescription="image"
-            android:layout_gravity="center"
-            android:src="@drawable/sw_background"/>
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_weight="1.5"
-    android:orientation="horizontal"
-    android:background="#ffffff">
-
-        <EditText
-            android:layout_margin="4dp"
-            android:inputType="textMultiLine"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/description_text"
-            android:minLines="2"
-            android:maxLines="3"
-            android:scrollbars="horizontal"
-            android:hint="Description- limited to 80 characters"
-            android:layout_weight="5"
-            android:gravity="top"
-            android:maxLength="80"
-            android:layout_gravity="center"/>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/location"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_action_place"/>
-    </LinearLayout>
+            android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
-        android:background="#32009dd9"
-        android:layout_gravity="bottom">
+        android:background="#80009dd9"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
 
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/capture_new_pic"
-            android:background="#32009dd9"
+            android:background="#00ffffff"
             android:src="@drawable/ic_action_camera"
             android:layout_gravity="center_vertical" />
+        <LinearLayout
+            android:layout_width="2dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:background="#80ffffff"/>
 
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/capture_share"
-            android:background="#32009dd9"
+            android:background="#00ffffff"
             android:src="@drawable/ic_action_share"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
-</FrameLayout>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:background="#00ffffff"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:layout_margin="4dp"
+            android:inputType="textMultiLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/description_text"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:minLines="2"
+            android:maxLines="3"
+            android:scrollbars="horizontal"
+            android:hint="Description- limited to 80 characters"
+            android:layout_weight="5"
+            android:layout_gravity="center_vertical"
+            android:background="#80ffffff"
+            android:maxLength="80" />
+    </LinearLayout>
+</RelativeLayout>
