--- a/app/src/main/res/layout/capture_fragment.xml
+++ b/app/src/main/res/layout/capture_fragment.xml
@@ -8,26 +8,27 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/input_layout"
         android:id="@+id/capture_background"
         android:src="@drawable/clouds_parlx_bg1"/>
 
 
-        <ImageView
+        <com.ameraz.android.cipdfcapture.app.ExtendedClasses.GestureImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/imageView"
-            android:scaleType="centerCrop"/>
+            android:layout_above="@+id/input_layout"
+            android:id="@+id/imageView"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#80009dd9"
+        android:background="#009dd9"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/input_layout">
 
         <ImageButton
             android:layout_width="0dp"
@@ -37,11 +38,23 @@
             android:background="#00ffffff"
             android:src="@drawable/ic_action_camera"
             android:layout_gravity="center_vertical" />
-        <LinearLayout
-            android:layout_width="2dp"
-            android:layout_height="30dp"
+
+        <EditText
+            android:layout_margin="4dp"
+            android:inputType="textMultiLine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/description_text"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:minLines="2"
+            android:maxLines="3"
+            android:scrollbars="horizontal"
+            android:hint="Description- limited to 80 characters"
+            android:layout_weight="5"
             android:layout_gravity="center_vertical"
-            android:background="#80ffffff"/>
+            android:background="#ffffff"
+            android:maxLength="80" />
 
         <ImageButton
             android:layout_width="0dp"
@@ -58,26 +71,9 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
         android:layout_gravity="center"
-        android:background="#00ffffff"
+        android:background="#CCffffff"
         android:layout_above="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-
-        <EditText
-            android:layout_margin="4dp"
-            android:inputType="textMultiLine"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/description_text"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:minLines="2"
-            android:maxLines="3"
-            android:scrollbars="horizontal"
-            android:hint="Description- limited to 80 characters"
-            android:layout_weight="5"
-            android:layout_gravity="center_vertical"
-            android:background="#80ffffff"
-            android:maxLength="80" />
     </LinearLayout>
 </RelativeLayout>
