--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -5,7 +5,7 @@
 
     <TableLayout
         android:layout_width="fill_parent"
-        android:layout_height="280dp"
+        android:layout_height="wrap_content"
         android:id="@+id/tableLayout">
 
         <TableRow
@@ -13,12 +13,11 @@
             android:layout_height="fill_parent">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Report Name"
                 android:id="@+id/textView5"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="50dp"
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
 
@@ -29,14 +28,14 @@
             android:layout_height="fill_parent">
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText"
                 android:layout_marginLeft="25dp"
                 android:hint="Fully Qualified Report Name" />
 
             <ImageButton
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:id="@+id/imageButton2"
                 android:src="@android:drawable/ic_menu_search" />
@@ -47,17 +46,16 @@
             android:layout_height="fill_parent">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Versions Available"
                 android:id="@+id/textView"
-                android:layout_marginRight="50dp"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
 
             <Spinner
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner"
                 android:layout_alignParentTop="true"
@@ -66,25 +64,43 @@
 
         </TableRow>
 
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tableLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/tableLayout2">
+
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginTop="25dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="DSID"
                 android:id="@+id/textView2"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
-                android:textColor="#0078c9"/>
+                android:textColor="#0078c9"
+                android:layout_marginRight="100dp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DSID Value"
-                android:id="@+id/textView6" />
+                android:id="@+id/textView6"
+                android:layout_marginLeft="25dp" />
         </TableRow>
 
         <TableRow
@@ -93,7 +109,7 @@
             android:layout_marginTop="25dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Bytes"
                 android:id="@+id/textView3"
@@ -101,12 +117,20 @@
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Bytes Value"
                 android:id="@+id/textView7"
-                android:singleLine="false" />
+                android:singleLine="false"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="25dp" />
         </TableRow>
 
         <TableRow
@@ -115,7 +139,7 @@
             android:layout_marginTop="25dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Format"
                 android:id="@+id/textView4"
@@ -124,20 +148,27 @@
                 android:textSize="18sp"
                 android:textColor="#0078c9"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Format Value"
-                android:id="@+id/textView8" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Format Value"
+                android:id="@+id/textView8"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="25dp" />
+        </TableRow>
     </TableLayout>
 
-    <ImageButton
+    <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:id="@+id/imageButton"
-        android:layout_below="@+id/tableLayout"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/tableLayout2"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
